--- a/CBNU_Kiosk_main/templates/index.html
+++ b/CBNU_Kiosk_main/templates/index.html
@@ -15,8 +15,15 @@
         <link href="/static/css/styles.css" rel="stylesheet" />
         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-        
+
     </head>
+    <style>
+        body {
+            background-color: #ffffff;
+
+        }
+
+    </style>
     <body>
         <!-- Begin Page Content -->
         {% block content %}
