음성출력 구현

--- a/CBNU_Kiosk_main/bugger/templates/bugger/camera.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/camera.html
@@ -79,7 +79,12 @@
     </div>
 </section>
 
-
+<script>
+         var audio = new Audio("/static/audio/카메라.wav"); // 음성 파일 경로
+        audio.load();
+        audio.volume = 1;
+        audio.play();
+</script>
 <script>
 
     function get_average(nums){
