--- a/CBNU_Kiosk_main/bugger/templates/bugger/home.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/home.html
@@ -87,6 +87,13 @@
 
 </style>
 
+<script>
+         var audio = new Audio("/static/audio/첫화면.wav"); // 음성 파일 경로
+        audio.load();
+        audio.volume = 1;
+        audio.play();
+</script>
+
 <link href="/static/css/basic.css" rel="stylesheet" />
 
 <header class="py-0">
@@ -97,6 +104,7 @@
 </header>
 
 <body class="background py-0" >
+
 
     <div class="container px-5 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center" id="box">
